[workspace]
resolver = "2"
members = [ "examples/kitti_dataset_slam","rslam-core", "rslam-dataset-reader", "rslam-sensor"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.0"

[workspace.dependencies]
rslam-core = { version = "*", path = "rslam-core" }
rslam-sensor = { version = "*", path = "rslam-sensor" }
rslam-dataset-reader = { version = "*", path = "rslam-dataset-reader" }
serde = { version = "1.0.215", features = ["derive"] }
sophus = { version = "0.9.0" }

[profile.dev]
debug = 0
opt-level = 2
