[package]
name = "proslam"
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
anyhow.workspace = true
opencv.workspace = true
log.workspace = true
rslam-core.workspace = true
sophus.workspace = true
rslam-sensor.workspace = true
